tests/reference/asr-class_04-b89178d.stderr
semantic error: References are not implemented
 --> tests/errors/class_04.py:9:1
  |
9 | p2: coord = p1
  | ^^^^^^^^^^^^^^ 
